--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="textColor">#013143</color>
     <color name="lightGray">#efefef</color>
     <color name="cBlue">#3a9deb</color>
+    <color name="tinderBack">#e9ecf2</color>
 </resources>
