--- a/app/src/main/res/layout/fragment_sign_up_extra.xml
+++ b/app/src/main/res/layout/fragment_sign_up_extra.xml
@@ -253,7 +253,7 @@
                     android:layout_marginBottom="30dp"
                     android:background="@color/cBlue"
                     android:fontFamily="@font/aller_bd"
-                    android:onClick="@{handler.onCreateUser}"
+                    android:onClick="@{handler::onCreateUser}"
                     android:text="finish"
                     android:textAllCaps="false"
                     android:textColor="@android:color/background_light"
