--- a/app/src/main/res/layout/near_location_item_view.xml
+++ b/app/src/main/res/layout/near_location_item_view.xml
@@ -1,35 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/location_profile_image_view"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <TextView
-        android:id="@+id/location_nick_name_text_view"
-        android:layout_width="wrap_content"
+    </data>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toRightOf="@id/location_profile_image_view"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="3dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="8dp">
 
-    <TextView
-        android:id="@+id/location_locate_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="30dp"
-        android:textSize="20sp"
-        app:layout_constraintLeft_toRightOf="@id/location_nick_name_text_view"
-        app:layout_constraintTop_toTopOf="parent" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp">
+
+            <ImageView
+                android:id="@+id/location_profile_image_view"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/female_gray" />
 
 
-</android.support.constraint.ConstraintLayout>
+            <ImageView
+                android:id="@+id/location_fragment_status_button"
+                android:layout_width="8dp"
+                android:layout_height="8dp"
+                android:layout_marginTop="12dp"
+                android:src="@drawable/onbutton"
+                app:layout_constraintEnd_toStartOf="@id/location_user_name_text_view"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@id/location_profile_image_view"
+                app:layout_constraintTop_toTopOf="@id/location_profile_image_view" />
+
+            <TextView
+                android:id="@+id/location_user_name_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Bum"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/location_fragment_status_button"
+                app:layout_constraintEnd_toEndOf="@id/location_user_age_text_view"
+                app:layout_constraintStart_toEndOf="@+id/location_fragment_status_button"
+                app:layout_constraintTop_toTopOf="@id/location_fragment_status_button" />
+
+            <TextView
+                android:id="@+id/location_user_age_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="20"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/location_user_name_text_view"
+                app:layout_constraintEnd_toEndOf="@id/location_user_country_text_view"
+                app:layout_constraintStart_toEndOf="@id/location_user_name_text_view"
+                app:layout_constraintTop_toTopOf="@id/location_user_name_text_view" />
+
+            <TextView
+                android:id="@+id/location_user_country_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:text="Korea"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="@id/location_user_age_text_view"
+                app:layout_constraintEnd_toStartOf="@id/location_user_country_image_view"
+                app:layout_constraintStart_toEndOf="@id/location_user_age_text_view"
+                app:layout_constraintTop_toTopOf="@id/location_user_age_text_view" />
+
+            <ImageView
+                android:id="@+id/location_user_country_image_view"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="4dp"
+                android:src="@drawable/google"
+                app:layout_constraintBottom_toBottomOf="@id/location_user_country_text_view"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/location_user_country_text_view" />
+
+            <TextView
+                android:id="@+id/location_fragment_plan_text_view"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:text="my plan is..."
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/location_profile_image_view"
+                app:layout_constraintTop_toBottomOf="@id/location_user_name_text_view" />
+
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+</layout>
